--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Web Developer Sergey Ovcharenko. London, Ontario</title>
+    <title>Digital webUX. Project in Graphics by Serhii Ovcharenko</title>
     <!-- Google Web Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
@@ -18,9 +18,12 @@
     <div id="wrap">
     <!-- header -->
       <header>
-
         <!-- mobile menu -->
-        <button type="button" id="menu"></button>
+        <div id="menu">
+            <div class="menu-line"></div>
+            <div class="menu-line"></div>
+            <div class="menu-line"></div>
+          </div>
         <!-- main navigation (hidden behind menu button) -->
         <nav id="nav">
           <ul>
@@ -35,7 +38,8 @@
 
       <!-- home section -->
       <section id="home">
-
+        <h1>digital <br> <span>webUX</span></h1>
+        <a id="find-more" href="#about-us">find out more</a>
       </section>
     </div>
 
