--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
             <h2>Services</h2>
             <div class="line"></div>
           </div>
+        </div>
+        <div class="row">
           <div class="col-8 text-box">
               <p>We design in: <br>
                   Sketch, Photoshop, Illustrator</p>
@@ -99,6 +101,7 @@
 
     <!-- contacts -->
     <section id="contacts">
+        <div class="row"></div>
         <div class="row">
           <img src="images/headphones.jpg" alt="headphones image">
           <div class="col-4 color-box">
