menu transitions with js

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <div class="menu-line"></div>
             <div class="menu-line"></div>
           </div>
-        <!-- main navigation (hidden behind menu button) -->
-        <nav id="nav">
+        <!-- main navigation (hidden by defualt, inline style to manipulate via js ) -->
+        <nav id="nav" style="visibility: hidden">
           <ul>
             <li><a href="#home">home</a></li>
             <li><a href="#about-us">about-us</a></li>
@@ -88,12 +88,12 @@
           </div>
           <div class="col-4 color-box links">
             <ul>
-              <li><a href="">Lodnon coffee shop</a></li>
-              <li><a href="">design-n-code</a></li>
-              <li><a href="">coderscoop</a></li>
-              <li><a href="">brands for you</a></li>
-              <li><a href="">prodottini</a></li>
-              <li><a href="">tan</a></li>
+              <li><a class="decorate" href="http://sergeycoffeedemo.surge.sh/" target="_blank">Lodnon coffee shop</a></li>
+              <li><a class="decorate" href="http://design-n-code.com/" target="_blank">design-n-code</a></li>
+              <li><a class="decorate" href="https://coderscoop.com/" target="_blank">coderscoop</a></li>
+              <li><a class="decorate" href="http://brandsforyou.surge.sh/" target="_blank">brands for you</a></li>
+              <li><a class="decorate" href="http://prodottini.surge.sh/" target="_blank">prodottini</a></li>
+              <li><a class="decorate" href="http://www.tan.com.ua/en/" target="_blank">tan</a></li>
             </ul>
           </div>
         </div>
@@ -109,8 +109,7 @@
             <div class="line"></div>
             <ul>
                 <li>226 700 00 00</li>
-                <li>team@digitalwebux.com</li>
-                <li></li>
+                <li><a class="decorate" href="mailto:team@digitalwebux.com">team@digitalwebux.com</a></li>
                 <li>London, ON</li>
                 <li>Canada</li>
                 <li>&copy; 2017 Serhii Ovcharenko</li>
