Added menu effects

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
           </div>
         <!-- main navigation (hidden by defualt, inline style to manipulate via js ) -->
         <nav id="nav" style="visibility: hidden">
-          <ul>
+          <ul id="nav-links">
             <li><a href="#home">home</a></li>
-            <li><a href="#about-us">about-us</a></li>
+            <li><a href="#about-us">about us</a></li>
             <li><a href="#services">services</a></li>
             <li><a href="#our-works">our works</a></li>
             <li><a href="#contacts">contacts</a></li>
