--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <div class="line"></div>
         </div>
         <div class="col-8 text-box">
-            <p>Digilal webUX is a web agency specialized in web development as well as in UX/UI design and web accesability.
+            <p>Digital webUX is a web agency specialized in web development as well as in UX/UI design and web accessibility.
                 We have only top designers and developers
                 in our team. So you can just relax and not worry about your website.</p>            
         </div>
@@ -88,12 +88,12 @@
           </div>
           <div class="col-4 color-box links">
             <ul>
-              <li><a class="decorate" href="http://sergeycoffeedemo.surge.sh/" target="_blank">Lodnon coffee shop</a></li>
-              <li><a class="decorate" href="http://design-n-code.com/" target="_blank">design-n-code</a></li>
-              <li><a class="decorate" href="https://coderscoop.com/" target="_blank">coderscoop</a></li>
-              <li><a class="decorate" href="http://brandsforyou.surge.sh/" target="_blank">brands for you</a></li>
-              <li><a class="decorate" href="http://prodottini.surge.sh/" target="_blank">prodottini</a></li>
-              <li><a class="decorate" href="http://www.tan.com.ua/en/" target="_blank">tan</a></li>
+              <li><a href="http://sergeycoffeedemo.surge.sh/" target="_blank">Lodnon coffee shop</a></li>
+              <li><a href="http://design-n-code.com/" target="_blank">design-n-code</a></li>
+              <li><a href="https://coderscoop.com/" target="_blank">coderscoop</a></li>
+              <li><a href="http://brandsforyou.surge.sh/" target="_blank">brands for you</a></li>
+              <li><a href="http://prodottini.surge.sh/" target="_blank">prodottini</a></li>
+              <li><a href="http://www.tan.com.ua/en/" target="_blank">tan</a></li>
             </ul>
           </div>
         </div>
@@ -109,7 +109,7 @@
             <div class="line"></div>
             <ul>
                 <li>226 700 00 00</li>
-                <li><a class="decorate" href="mailto:team@digitalwebux.com">team@digitalwebux.com</a></li>
+                <li><a href="mailto:team@digitalwebux.com">team@digitalwebux.com</a></li>
                 <li>London, ON</li>
                 <li>Canada</li>
                 <li>&copy; 2017 Serhii Ovcharenko</li>
