--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Digital webUX. Project in Graphics by Serhii Ovcharenko</title>
+    <title>Digital webUX. Template by Sergey Ovcharenko</title>
     <!-- Google Web Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
     <!-- styles -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <!-- wrap for full height background -->
@@ -71,10 +71,10 @@
         <div class="row">
           <div class="col-8 text-box">
               <p>We design in: <br>
-                  Sketch, Photoshop, Illustrator</p>
+                  Sketch, Photoshop</p>
               <br>
               <p>Technologies we use: <br>
-                  Vue.js, React, Laravel, Wordpress</p>
+                  Vue.js, Laravel, Wordpress</p>
           </div>
         </div>
     </section>
@@ -88,12 +88,11 @@
           </div>
           <div class="col-4 color-box links">
             <ul>
-              <li><a href="http://sergeycoffeedemo.surge.sh/" target="_blank">Lodnon coffee shop</a></li>
               <li><a href="http://design-n-code.com/" target="_blank">design-n-code</a></li>
-              <li><a href="https://coderscoop.com/" target="_blank">coderscoop</a></li>
-              <li><a href="http://brandsforyou.surge.sh/" target="_blank">brands for you</a></li>
-              <li><a href="http://prodottini.surge.sh/" target="_blank">prodottini</a></li>
-              <li><a href="http://www.tan.com.ua/en/" target="_blank">tan</a></li>
+              <li><a href="http://design-n-code.com/" target="_blank">digitalwebux</a></li>
+              <li><a href="http://design-n-code.com/" target="_blank">uxuidesign</a></li>
+              <li><a href="http://design-n-code.com/" target="_blank">mobilefirst</a></li>
+              <li><a href="http://design-n-code.com/" target="_blank">template</a></li>
             </ul>
           </div>
         </div>
@@ -108,17 +107,17 @@
             <h2>Contacts</h2>
             <div class="line"></div>
             <ul>
-                <li>226 700 00 00</li>
-                <li><a href="mailto:team@digitalwebux.com">team@digitalwebux.com</a></li>
+                <li>226 000 00 00</li>
+                <li><a href="http://design-n-code.com/" target="_blank">digitalwebux</a></li>
                 <li>London, ON</li>
                 <li>Canada</li>
-                <li>&copy; 2017 Serhii Ovcharenko</li>
+                <li>&copy; 2018 Sergey Ovcharenko</li>
               </ul>
           </div>
         </div>
     </section>
 
     <!-- javascript -->
-    <script type="text/javascript" src="scripts.js"></script>
+    <script src="scripts/app.js"></script>
   </body>
 </html>
