--- a/index.html
+++ b/index.html
@@ -1,29 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <title>Digital webUX. Template by Sergey Ovcharenko</title>
     <!-- Google Web Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Rubik:300,400,700"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Poiret+One"
+      rel="stylesheet"
+    />
     <!-- styles -->
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
     <!-- wrap for full height background -->
     <div id="wrap">
-    <!-- header -->
+      <!-- header -->
       <header>
         <!-- mobile menu -->
         <div id="menu">
-            <div class="menu-line"></div>
-            <div class="menu-line"></div>
-            <div class="menu-line"></div>
-          </div>
+          <div class="menu-line"></div>
+          <div class="menu-line"></div>
+          <div class="menu-line"></div>
+        </div>
         <!-- main navigation (hidden by defualt, inline style to manipulate via js ) -->
         <nav id="nav" style="visibility: hidden">
           <ul id="nav-links">
@@ -38,7 +44,10 @@
 
       <!-- home section -->
       <section id="home">
-        <h1>digital <br> <span>webUX</span></h1>
+        <h1>
+          digital <br />
+          <span>webUX</span>
+        </h1>
         <a id="find-more" href="#about-us">find out more</a>
       </section>
     </div>
@@ -51,70 +60,96 @@
           <div class="line"></div>
         </div>
         <div class="col-8 text-box">
-            <p>Digital webUX is a web agency specialized in web development as well as in UX/UI design and web accessibility.
-                We have only top designers and developers
-                in our team. So you can just relax and not worry about your website.</p>            
+          <p>
+            Digital webUX is a web agency specialized in web development as well
+            as in UX/UI design and web accessibility. We have only top designers
+            and developers in our team. So you can just relax and not worry
+            about your website.
+          </p>
         </div>
       </div>
     </section>
 
     <!-- services section -->
     <section id="services">
-      
       <div class="row">
-          <img src="images/laptops-bg.jpg" alt="laptops image">
-          <div class="col-4 color-box">
-            <h2>Services</h2>
-            <div class="line"></div>
-          </div>
+        <img src="images/laptops-bg.jpg" alt="laptops image" />
+        <div class="col-4 color-box">
+          <h2>Services</h2>
+          <div class="line"></div>
         </div>
-        <div class="row">
-          <div class="col-8 text-box">
-              <p>We design in: <br>
-                  Sketch, Photoshop</p>
-              <br>
-              <p>Technologies we use: <br>
-                  Vue.js, Laravel, Wordpress</p>
-          </div>
+      </div>
+      <div class="row">
+        <div class="col-8 text-box">
+          <p>
+            We design in: <br />
+            Sketch, Photoshop
+          </p>
+          <br />
+          <p>
+            Technologies we use: <br />
+            React, Next.js, Wordpress
+          </p>
         </div>
+      </div>
     </section>
 
     <!-- our works section -->
     <section id="our-works">
-        <div class="row">
-          <div class="col-4 color-box">
-            <h2>Our works</h2>
-            <div class="line"></div>
-          </div>
-          <div class="col-4 color-box links">
-            <ul>
-              <li><a href="http://design-n-code.com/" target="_blank">design-n-code</a></li>
-              <li><a href="http://design-n-code.com/" target="_blank">digitalwebux</a></li>
-              <li><a href="http://design-n-code.com/" target="_blank">uxuidesign</a></li>
-              <li><a href="http://design-n-code.com/" target="_blank">mobilefirst</a></li>
-              <li><a href="http://design-n-code.com/" target="_blank">template</a></li>
-            </ul>
-          </div>
+      <div class="row">
+        <div class="col-4 color-box">
+          <h2>Our works</h2>
+          <div class="line"></div>
         </div>
+        <div class="col-4 color-box links">
+          <ul>
+            <li>
+              <a href="https://handcraftedweb.dev" target="_blank"
+                >handcraftedweb.dev</a
+              >
+            </li>
+            <li>
+              <a href="http://handcraftedweb.dev" target="_blank"
+                >digitalwebux</a
+              >
+            </li>
+            <li>
+              <a href="http://handcraftedweb.dev" target="_blank">uxuidesign</a>
+            </li>
+            <li>
+              <a href="http://handcraftedweb.dev" target="_blank"
+                >mobilefirst</a
+              >
+            </li>
+            <li>
+              <a href="http://handcraftedweb.dev" target="_blank">template</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </section>
 
     <!-- contacts -->
     <section id="contacts">
-        <div class="row"></div>
-        <div class="row">
-          <img src="images/headphones.jpg" alt="headphones image">
-          <div class="col-4 color-box">
-            <h2>Contacts</h2>
-            <div class="line"></div>
-            <ul>
-                <li>226 000 00 00</li>
-                <li><a href="http://design-n-code.com/" target="_blank">digitalwebux</a></li>
-                <li>London, ON</li>
-                <li>Canada</li>
-                <li>&copy; 2018 Sergey Ovcharenko</li>
-              </ul>
-          </div>
+      <div class="row"></div>
+      <div class="row">
+        <img src="images/headphones.jpg" alt="headphones image" />
+        <div class="col-4 color-box">
+          <h2>Contacts</h2>
+          <div class="line"></div>
+          <ul>
+            <li>226 000 00 00</li>
+            <li>
+              <a href="http://handcraftedweb.dev" target="_blank"
+                >digitalwebux</a
+              >
+            </li>
+            <li>London, ON</li>
+            <li>Canada</li>
+            <li>&copy; 2018 Sergey Ovcharenko</li>
+          </ul>
         </div>
+      </div>
     </section>
 
     <!-- javascript -->
